[web] ui/button: fix special variant rendering bug on Safari

--- a/apps/web/src/styles/fancy.css
+++ b/apps/web/src/styles/fancy.css
@@ -36,6 +36,10 @@
   /* -webkit-mask-composite: xor; */
 }
 
+.shiny {
+  position: relative;
+}
+
 .shiny::before {
   background: linear-gradient(
     var(--brand-gradient-radial-dark) 0%,
